--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prakritikkheti</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mobile-style.css" media="(max-width : 1100px)">
 </head>
 <body>
-    <!-- <h1>hello this is for testing</h1> -->
-    hey
     <header>
         jay shree ram, jay jay shree ram,jay seeta-ram
     </header>
     <main>
         <nav>
-
+            <a href="#">item1</a>
+            <a href="#">item2</a>
+            <a href="#">item3</a>
         </nav>
-        <iframe src="about.html">
+        <iframe src="home.html">
     </main>
 </body>
 </html>
